k8s/canary/deployment-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-deploy-canary
  labels:
    app: k8s-deploy
    track: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-deploy
      track: canary
  template:
    metadata:
      labels:
        app: k8s-deploy
        track: canary
    spec:
      containers:
        - name: app
          image: docker.io/aureri/node-deployment-app:1.1.0  # canary uses new image
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet: { path: "/", port: 3000 }
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: "/api", port: 3000 }
            initialDelaySeconds: 5
            periodSeconds: 10
