k8s/canary/service-canary.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-deploy-canary-svc
spec:
  selector:
    app: k8s-deploy
    track: canary
  ports:
    - name: http
      port: 80
      targetPort: 3000
