k8s/canary/service-stable.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-deploy-stable-svc
spec:
  selector:
    app: k8s-deploy
    track: stable
  ports:
    - name: http
      port: 80
      targetPort: 3000
