k8s/canary/ingress-canary.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-deploy-canary-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50" 
spec:
  ingressClassName: nginx
  rules:
    - host: app.local 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-deploy-canary-svc
                port:
                  number: 80
