k8s/canary/ingress-main.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-deploy-main-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-deploy-stable-svc
                port:
                  number: 80
